fix(vscode): fix my shit
scrollbar:
- fix scrollbar appearing above the context menu
- fix horizontal scrollbar appearance

tree:
- fix count badge color
- fix row level 4 offset
- remove arrows on sticky rows
- remove arrows on rows that don't have it in search view

other:
- fix editor suggest widget
- fix sticky widget support

--- a/src/vscode/global.scss
+++ b/src/vscode/global.scss
@@ -8,5 +8,8 @@
 
 	& > .scrollbar:where(.invisible.fade, .visible) {
 		opacity: 1;
+
+		// Appears above the context menu otherwise.
+		z-index: auto;
 	}
 }
