--- a/src/vscode/parts/editor.scss
+++ b/src/vscode/parts/editor.scss
@@ -111,6 +111,10 @@
 		height: 100%;
 	}
 
+	.sticky-widget {
+		width: calc(100% - var(--scrollbar-size) - 24px);
+	}
+
 	.lines-content,
 	.view-lines {
 		width: calc(100% - var(--scrollbar-size));
